--- a/src/_layouts/content.njk
+++ b/src/_layouts/content.njk
@@ -129,7 +129,8 @@ hasSup: hasSup,
           },
       location: {
           name: location.name,
-          url: location.url or ''
+          url: location.url or '',
+          event: location.event 
           }
       }
   } %}
