--- a/src/publications/articles/2021-Montevil-Stiegler-Sciences-Entropocene/index.njk
+++ b/src/publications/articles/2021-Montevil-Stiegler-Sciences-Entropocene/index.njk
@@ -9,6 +9,9 @@ tags:
     - disruption
     - pharmacology
     - knowledge
+syndication:
+  twitter: "https://twitter.com/MMontevil/status/1391897167028162566"
+  mastodon: "https://scholar.social/web/statuses/106213564070620012"
 ---
 
     <p class="titleHead"> Sciences et entropocène</br>Autour de <span class="cmti-10">Qu’appelle-t-on panser ?</span> de Bernard Stiegler</p>
