--- a/src/_includes/macros/meta.njk
+++ b/src/_includes/macros/meta.njk
@@ -18,7 +18,7 @@
   
     {% if item.data.video %}
      <li class=" meta__item ">
-        {% icon "video", "Video" %} Recording available
+       <a href="{{-item.url-}}#video"> {% icon "video", "Video" %} Recording available</a>
         </li>
         {% endif %} 
     {% if item.data.page.date %}
