--- a/src/redirects.njk
+++ b/src/redirects.njk
@@ -98,28 +98,36 @@ eleventyExcludeFromCollections: true
 
 #biblio pages
 /*/2d-geometry-biological-time           /publications/articles/2011-BLM-2D-Time-Biology/      301
+/en/journal-article/2-dimensional-geometry-biological-time  /publications/articles/2011-BLM-2D-Time-Biology/      301
 /*/biological-default-state-cell-proliferation-variation-and-motility-fundamental-principle-theory           /publications/articles/2016-SLM-Theoretical-Principle-Default-State      301
 /*/biological-organisation-closure-constraints           /publications/articles/2015-MM-Organisation-Closure-Constraints      301
 /*/combined-morphometric-and-statistical-approach-assess-non-monotonicity-developing-mammary-gland-rats           /publications/articles/2020-MAS-Morphometric-Clarity-Bpa      301
 /*/de-l’œuvre-de-turing-aux-défis-contemporains-pour-la-compréhension-mathématique-du-vivant-2           /publications/articles/2020-Montevil-Turing-Biology      301
 /*/de-l’œuvre-de-turing-aux-défis-contemporains-pour-la-compréhension-mathématique-du-vivant           /publications/articles/2020-Montevil-Turing-Biology/    301
+/en/de-turing-aux-defis-contemporains-pour-la-comprehension-mathematique-du-vivant   /publications/articles/2020-Montevil-Turing-Biology/    301
 /*/ecological-models-gene-therapy-ii-niche-construction-nongenetic-inheritance-and-ecosystem           /publications/articles/2014-PMF-Ecological-Models-Cells-Genes      301
 /*/ecological-models-gene-therapy-i-models-intraorganismal-ecology           /publications/articles/2014-PM-Ecological-Models-Cells      301
 /*/entropies-and-anthropocene-crisis           /publications/articles/2021-Montevil-Entropies-Anthropocene      301
 /*/extended-criticality-phase-spaces-and-enablement-biology           /publications/articles/2013-LM-Extended-Criticality-Enablement      301
 /*/guide-cancer-critics-paradigms           /publications/articles/2017-MP-Hitchhikers-Guide-Cancer      301
+/en/hitchhiker-s-guide-cancer-galaxy-how-two-critics-missed-their-destination /publications/articles/2017-MP-Hitchhikers-Guide-Cancer      301
 /*/historicity-heart-biology           /publications/articles/2020-Montevil-Historicity-Heart-Biology      301
 /*/identity-organisms-scientific-practice-integrating-historical-and-relational-conceptions           /publications/articles/2020-MM-Identity-Organism      301
+/en/biological-identity-crossroad-between-historical-and-relational-conceptions /publications/articles/2020-MM-Identity-Organism      301
 /*/levels-organization-critical-transitions           /publications/articles/2012-LMP-Levels-Organization-Criticality      301
+/en/journal-article/bottom-approaches-levels-organization-and-extended-critical-transitions /publications/articles/2012-LMP-Levels-Organization-Criticality      301
 /*/living-state-matter-time-anti-entropy           /publications/articles/2012-LM-Inert-Vs-Living      301
+/en/journal-article/inert-vs-living-state-matter-extended-criticality-time-geometry-anti-entropy  /publications/articles/2012-LM-Inert-Vs-Living      301
 /*/logic-biology-physics-survey           /publications/articles/2017-LM-Logic-Physics-Biology      301
 /*/Longo-Montevil_2011_Extended-criticalityhtml           /publications/articles/2011-LM-Biology-Extending-Criticality       301
+/en/journal-article/physics-biology-extending-criticality-and-symmetry-breakings   /publications/articles/2011-LM-Biology-Extending-Criticality       301
 /*/measurement-biology-methodized-theory           /publications/articles/2019-Montevil-Measurement-Biology-Theory      301
 /*/modeling-mammary-organogenesis-biological-first-principles-cells-and-their-physical-constraints           /publications/articles/2016-MSS-Modeling-Organogenesis-Principles      301
 /*/physics-biology-criticality-symmetry           /publications/articles/2011-LM-Biology-Extending-Criticality      301
 /*/physics-biology-extending-criticality-and-symmetry-breakings-update           /publications/articles/2019-LM-Extending-Criticality-Extended      301
 /*/possibility-spaces-and-notion-novelty-music-biology           /publications/articles/2019-Montevil-Possibility-Spaces-Novelty      301
 /*/protention-retention-biological-systems           /publications/articles/2011-LM-Protention-Retention-Biology      301
+/en/journal-article/protention-and-retention-biological-systems  /publications/articles/2011-LM-Protention-Retention-Biology      301
 /*/sama-method-3d-morphological-analysis           /publications/articles/2016-PMS-Sama-Method-Morphometry      301
 /*/sciences-et-entropocène-autour-de-qu’appelle-t-panser-2-de-bernard-stiegler-2           /publications/articles/2021-Montevil-Stiegler-Sciences-Entropocene      301
 /*/sciences-et-entropocène-autour-de-qu’appelle-t-panser-2-de-bernard-stiegler           /publications/articles/2021-Montevil-Stiegler-Sciences-Entropocene      301
@@ -132,16 +140,21 @@ eleventyExcludeFromCollections: true
 /*/theoretical-principles-biology-variation           /publications/articles/2016-MMP-Theoretical-Principles-Variation      301
 /*/toward-theory-organisms-three-founding-principles-search-useful-integration           /publications/articles/2016-SLN-Conclusion-Century-Organism      301
 /*/which-first-principles-mathematical-modelling-biology           /publications/articles/2019-Montevil-First-Principles-Biology      301
-
 /*/primer-mathematical-modeling-study-organisms-and-their-parts           /publications/chapters/2018-Montevil-Primer-Mathematical-Modeling      301
 /*/siecle-organisme-theorie           /publications/chapters/2017-MLS-Siecle-Organisme      301
+/en/du-siecle-du-gene-a-celui-de-l-organisme-introduction-a-de-nouvelles-perspectives-theoriques /publications/chapters/2017-MLS-Siecle-Organisme      301
 /*/repetition-and-reversibility-evolution-theoretical-population-genetics           /publications/chapters/2017-GM-Repetition-Reversibility-Evolution      301
 /*/randomness-increases-order-evolution           /publications/chapters/2012-LM-Randomness-Order-Evolution      301
+/en/book-chapter/randomness-increases-order-biological-evolution  /publications/chapters/2012-LM-Randomness-Order-Evolution      301
 /*/no-entailing-laws-enablement           /publications/chapters/2012-LMK-No-Entailing-Laws-Enablement      301
+/en/journal-article/no-entailing-laws-enablement-evolution-biosphere /publications/chapters/2012-LMK-No-Entailing-Laws-Enablement      301
 /*/geometrie-temps-rythmes-et-protension           /publications/chapters/2012-Montevil-Geometrie-Temps-Biologique      301
+/en/conference-paper/geometrie-du-temps-biologique-rythmes-et-protension  /publications/chapters/2012-Montevil-Geometrie-Temps-Biologique      301
 /*/gayon-montevil-repetition-reversibilite-evolution-2           /publications/chapters/2018-GM-Repetition-Reversibilite      301
 /*/Gayon-Montevil-repetition-reversibilite-evolution           /publications/chapters/2018-GM-Repetition-Reversibilite      301
+/en/repetition-et-reversibilite-dans-l-evolution-la-genetique-des-populations-theorique  /publications/chapters/2018-GM-Repetition-Reversibilite      301
 /*/incompressible-complexite-reel-evolution           /publications/chapters/2014-LMP-Incompressible-Complexite      301
+/en/l-incompressible-complexite-du-reel-et-la-construction-evolutive-du-simple /publications/chapters/2014-LMP-Incompressible-Complexite      301
 /*/introduction-new-perspectives-biology           /publications/chapters/2014-LM-Introduction-New-Perspectives      301
 /*/le-sens-des-formes-en-biologie           /publications/chapters/2021-Sens-Formes-biologie      301
 /*/comparing-symmetries-models-and-simulations           /publications/chapters/2017-LM-Comparing-Symmetries-Models      301
@@ -151,7 +164,9 @@ eleventyExcludeFromCollections: true
 /*/big-data-et-connaissance-biologique           /publications/chapters/2017-LM-Big-Data-Connaissance      301
 /*/century-gene-organism-introduction-new-theoretical-perspectives           /publications/chapters/2018-MLS-Gene-Century-Organism      301
 /*/mathematiques-objectivation-vivant           /publications/chapters/2015-Montevil-Symetrie-Objectivation-Vivant      301
+/en/changements-de-symetrie-criticite-et-aleatoire-mathematiques-et-objectivation-du-vivant   /publications/chapters/2015-Montevil-Symetrie-Objectivation-Vivant      301
 /*/discussion-science           /publications/chapters/2017-MM-Une-Breve-Discussion      301
+/en/une-breve-discussion-sur-la-science-autour-dun-verre /publications/chapters/2017-MM-Une-Breve-Discussion      301
 /publications/varia/2017-MM-Une-Breve-Discussion           /publications/chapters/2017-MM-Une-Breve-Discussion      301
 
 
